# aws-start-stop

./: .gitignore  Cargo.toml  README.md
src/: aws.rs  config.rs  main.rs
