[package]
name = "aws-start-stop"
version = "0.9.4"
edition = "2021"
authors = ["Vlad Vasiliu"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "1"
aws-sdk-ec2 = "1"
aws-sdk-ssm = "1"
clap = { version = "3", features = ["cargo", "env", "regex"] }
color-eyre = "0.6"
regex = { version = "1", features = ["perf-dfa"] }
tokio = { version = "1", features = ["macros", "parking_lot", "rt", "time"] }

[profile.release]
lto = true
incremental = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev.package.backtrace]
opt-level = 3
